--- a/ActivityStartup/app/src/main/AndroidManifest.xml
+++ b/ActivityStartup/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.duan.android.activitystartup">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+
     <application
         android:name=".base.BaseApplication"
         android:allowBackup="true"
@@ -18,7 +22,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".InfoUpdateActivity" />
-        <activity android:name=".WebViewActivity"></activity>
+        <activity android:name=".WebViewActivity" />
+        <activity android:name=".js_web.PhotoBrowserActivity" />
+        <activity android:name=".js_web.MWebViewActivity"></activity>
     </application>
 
 </manifest>
