--- a/ActivityStartup/build.gradle
+++ b/ActivityStartup/build.gradle
@@ -27,8 +27,17 @@ task clean(type: Delete) {
 }
 
 ext{
+    minSdkVersion = 19
+    targetSdkVersion = 27
+    compileSdkVersion = 27
+    buildToolsVersion = '27.0.3'
+
+    // App dependencies
+    supportLibraryVersion = '27.1.1'
+
     butterKnifeVersion = '8.8.1'
     daggerVersion = '2.11'        // 2.4
-
     gsonVersion = '2.6.2'
+    glideVersion = '3.8.0'
+    photoviewVersion = '1.4.1'
 }
