--- a/ActivityStartup/app/build.gradle
+++ b/ActivityStartup/app/build.gradle
@@ -19,13 +19,12 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
 
     annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
     annotationProcessor "com.google.dagger:dagger-android-processor:$rootProject.daggerVersion"
@@ -33,8 +32,22 @@ dependencies {
     implementation "com.jakewharton:butterknife:$rootProject.butterKnifeVersion"
 
     compile "com.google.code.gson:gson:$rootProject.gsonVersion"
+    compile "com.bm.photoview:library:$rootProject.photoviewVersion"
+    compile "com.github.bumptech.glide:glide:$rootProject.glideVersion"
+    implementation "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
 
-    compile 'com.bm.photoview:library:1.4.1'
-    compile 'com.github.bumptech.glide:glide:3.8.0'
+    // 微信 包含统计功能
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
 
+    //网络请求 retrofit2 + Rx + OkHttp
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.0'
+
+    // 小米 检查更新SDK
+    compile 'mi-appstore:xiaomi-update-sdk:4.0.3'
 }
